[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/sfxtest.gd" type="Script" id=1]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=2]
[ext_resource path="res://backgounds/nebula_-_6044 (720p).ogv" type="VideoStream" id=3]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Sfxtest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="nebula" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 3 )
autoplay = true
loop = true

[node name="Game name" type="Label" parent="."]
margin_left = 229.0
margin_top = 3.0
margin_right = 1078.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 5 )
text = "Sound Effect Test"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 511.0
margin_top = 361.0
margin_right = 770.0
margin_bottom = 617.0

[node name="Frank" type="Button" parent="VBoxContainer"]
margin_right = 259.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Frank Voice"

[node name="Crash" type="Button" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 259.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
text = "Crash"

[node name="Complete" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 259.0
margin_bottom = 191.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Complete"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 259.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/Frank" to="." method="_on_frank_pressed"]
[connection signal="pressed" from="VBoxContainer/Crash" to="." method="_on_crash_pressed"]
[connection signal="pressed" from="VBoxContainer/Complete" to="." method="_on_complete_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
